Re-introduced PRefabs
Changed Prefabs assets to include scripts

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Thumbs.db.meta
 
 # VS Code
 *.vscode
+roller_pool/roller_pool/ProjectSettings/Packages/com.unity.testtools.codecoverage/Settings.json
